GNOME Bugzilla – Bug 756588
Fix up annotations on data/qdata API of GObject
Last modified: 2017-10-05 14:28:16 UTC
Following bug #756470, which dealt with the underlying data list API.
Created attachment 313323 [details] [review] gobject: Add missing (nullable) and (out) annotations on the data/qdata API
Created attachment 313324 [details] [review] gobject: Skip more non-introspectable data/qdata methods
Review of attachment 313323 [details] [review]: Applies with trivial rebase conflicts and looks good.
Review of attachment 313324 [details] [review]: Vala appears to manually bind some of these methods. They do appear in the pygi documentation for GLib, but with the wrong function signatures, so people obviously haven’t been using them.
Pushed after fixing minor rebase conflicts. Attachment 313323 [details] pushed as 1e45c0a - gobject: Add missing (nullable) and (out) annotations on the data/qdata API Attachment 313324 [details] pushed as 0ea004c - gobject: Skip more non-introspectable data/qdata methods
*** Bug 766897 has been marked as a duplicate of this bug. ***