gobject: Add missing (nullable) and (out) annotations on the data/qdata API

https://bugzilla.gnome.org/show_bug.cgi?id=756588